--- a/configs/stylesheet.css
+++ b/configs/stylesheet.css
@@ -2,7 +2,7 @@
 * @Author: anh-tuan.vu
 * @Date:   2021-02-04 23:50:05
 * @Last Modified by:   anh-tuan.vu
-* @Last Modified time: 2021-02-04 23:50:20
+* @Last Modified time: 2021-02-11 11:39:45
 */
 
 .has-dropcap:first-letter {
@@ -11,6 +11,6 @@
   margin: -0.45em 0.05em -0.45em 0;
 }
 
-h2.title {
+h2.title, h4.subtitle {
   text-align: center;
 }
